WebKitMediaSession should be GC collectable when its document is being stopped https://bugs.webkit.org/show_bug.cgi?id=189016

Reviewed by Eric Carlson.

Source/WebCore:

Make sure WebKitMediaSession is  collectable after its document is stopped.
This is done by nullifying m_session when calling close.
This way hasPendingActivity() returns false when stop() is called.

Test: http/tests/media/clearkey/collect-webkit-media-session.html

* Modules/encryptedmedia/legacy/WebKitMediaKeySession.cpp:
(WebCore::WebKitMediaKeySession::WebKitMediaKeySession):
(WebCore::WebKitMediaKeySession::close):
* Modules/encryptedmedia/legacy/WebKitMediaKeySession.h:

LayoutTests:

* http/tests/media/clearkey/collect-webkit-media-session-expected.txt: Added.
* http/tests/media/clearkey/collect-webkit-media-session.html: Added.
* http/tests/media/clearkey/resources/mywebkitmediasessionframe.htm: Added.


Canonical link: https://commits.webkit.org/204083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235429 268f45cc-cd09-0410-ab3c-d52691b4dbfc