Source/WebCore/Modules/encryptedmedia/legacy/WebKitMediaKeySession.h
@@ -48,7 +48,7 @@ public:
 
     WebKitMediaKeyError* error() { return m_error.get(); }
     const String& keySystem() const { return m_keySystem; }
-    const String& sessionId() const;
+    const String& sessionId() const { return m_sessionId; }
     ExceptionOr<void> update(Ref<Uint8Array>&& key);
     void close();
 
